--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@emotion/react": "^11.7.1",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.2",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.27.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1"
   },
