--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "testcafe": "testcafe chrome",
+    "testcafe:headless": "testcafe chrome:headless",
+    "e2e": "start-server-and-test start http://localhost:3000 testcafe",
+    "e2e:headless": "start-server-and-test start http://localhost:3000 testcafe:headless"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -27,6 +31,8 @@
     "@types/react": "17.0.39",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
+    "start-server-and-test": "^1.14.0",
+    "testcafe": "^1.18.3",
     "typescript": "4.5.5"
   }
 }
