--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "remark-html": "^15.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
+    "jest": "^27.5.1",
     "start-server-and-test": "^1.14.0",
     "testcafe": "^1.18.3",
     "typescript": "4.5.5"
